--- a/To Do List/index.html
+++ b/To Do List/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>To Do List</title>
-  <link rel="stylesheet" href="to-do-list.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -22,6 +22,6 @@
       </ul> -->
     </div>
     </div>
-    <script src="toDo.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
