--- a/Rock Paper Scissor Game/index.html
+++ b/Rock Paper Scissor Game/index.html
@@ -12,13 +12,13 @@
   <h1>Rock Paper Scissor</h1>
   <div class="choices">
     <div class="choice" id="rock">
-      <img src="rock.png" alt="Rock">
+      <img src="images/rock.png" alt="Rock">
     </div>
     <div class="choice" id="paper">
-      <img src="paper.png" alt="Paper">
+      <img src="images/paper.png" alt="Paper">
     </div>
     <div class="choice" id="scissor">
-      <img src="scissors.png" alt="Scissor">
+      <img src="images/scissors.png" alt="Scissor">
     </div>
   </div>
 <div class="score-board">
