--- a/To Do List/index.html
+++ b/To Do List/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="to-do">
-      <h2>To Do List <img src="images/to-do-list.png"></h2>
+      <h2>To Do List <img src="./images/to-do-list.png"></h2>
       <div class="input-box">
         <input type="text" id="taskInput" placeholder="Add your Task">
         <button onclick="addTask()">ADD</button>
@@ -22,6 +22,6 @@
       </ul> -->
     </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
