--- a/Rock Paper Scissor Game/index.html
+++ b/Rock Paper Scissor Game/index.html
@@ -12,13 +12,13 @@
   <h1>Rock Paper Scissor</h1>
   <div class="choices">
     <div class="choice" id="rock">
-      <img src="images/rock.png" alt="Rock">
+      <img src="./images/rock.png" alt="Rock">
     </div>
     <div class="choice" id="paper">
-      <img src="images/paper.png" alt="Paper">
+      <img src="./images/paper.png" alt="Paper">
     </div>
     <div class="choice" id="scissor">
-      <img src="images/scissors.png" alt="Scissor">
+      <img src="./images/scissors.png" alt="Scissor">
     </div>
   </div>
 <div class="score-board">
@@ -34,7 +34,7 @@
   <div class="msg-cont">
     <p id="msg">Play your move</p>
   </div>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
